<resources>
    <string name="app_name">Vocab</string>
    <string name="check">Check</string>
    <string name="reset">Reset</string>
    <string name="noun">Noun or Adjective</string>
    <string name="verb_1">Verb 1</string>
    <string name="verb_2">Verb 2</string>
    <string name="verb_3">Verb 3</string>
    <string name="verb_ing">Verb Ing</string>
    <string name="next">Next</string>
    <string name="correct_info">Question Number: %1$d, Correct: %2$d, from:%3$d</string>
    <string name="correct_answer">Your Answer is Correct</string>
    <string name="wrong_answer">The Correct Answer is: %1$s</string>
    <string name="basic_level">Basic Level</string>
    <string name="pre_basic_level">Pre Basic Level</string>
    <string name="developed_by">Made with Love by Cahya Bagus Sanjaya</string>
    <string name="quiz">Quiz</string>
</resources>
